alignment issue fixed

--- a/responsive.css
+++ b/responsive.css
@@ -434,13 +434,14 @@
 
   .footer-column {
     margin: 0 60px;
-    margin-bottom: 90px;
+    margin-bottom: 50px;
   }
 
   
   .footer-column-wrapper {
     display: flex;
     flex-wrap: wrap;
+    
     
     justify-content: flex-start;
   }
